--- a/VE.csproj
+++ b/VE.csproj
@@ -64,6 +64,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 		<PackageReference Include="SkiaSharp" Version="3.119.1" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.1" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
